--- a/src/resources/views/partials/changeInforUser.hbs
+++ b/src/resources/views/partials/changeInforUser.hbs
@@ -50,14 +50,14 @@
                     <h2 class="text-2xl font-semibold text-gray-800 mb-6">Hồ sơ cá nhân</h2>
               
                     <div class="mb-4">
-                      <label class="block text-gray-700 font-medium mb-1">user name<span class="text-red-500">*</span></label>
+                      <label class="block text-gray-700 font-medium mb-1">Họ<span class="text-red-500">*</span></label>
                       <input id="inputLastname" value="{{user_name}}" name="user_lastname"  type="text" placeholder="Nhập họ" class="w-full px-4 py-2 border border-gray-300 rounded-xl focus:outline-none focus:ring-2 focus:ring-blue-500" />
                     </div>
-{{!--               
+              
                     <div class="mb-4">
                       <label class="block text-gray-700 font-medium mb-1">Tên<span class="text-red-500">*</span></label>
                       <input id="inputFirstname" value="{{user_lastname}}" name="user_name" type="text" placeholder="Nhập tên" class="w-full px-4 py-2 border border-gray-300 rounded-xl focus:outline-none focus:ring-2 focus:ring-blue-500" />
-                    </div> --}}
+                    </div>
               
                     <div class="mb-4">
                       <label class="block text-gray-700 font-medium mb-1">Số điện thoại <span class="text-blue-600 cursor-pointer text-sm">Thay đổi</span></label>
@@ -105,7 +105,6 @@
         
           </div>
     </div>
-    
 <script>
 
   function showForm(formClass) {
